<resources>
    <string name="app_name">OLMS</string>
    <string name="profile_image">Profile Image</string>
    <string name="employee_id">Employee ID</string>
    <string name="back_button">Back Button</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="country_code">+91</string>
    <string name="mobile_number_here">Mobile Number Here</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_here">OTP Here</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="login">LogIn</string>
    <string name="employee_id_here">Employee Id Here</string>
    <string name="getting_status">Getting Status…</string>
    <string name="try_again">Try Again</string>
    <string name="mobile_verification_successful">Mobile Verification Successful!</string>
    <string name="verified">Verified</string>
    <string name="verifying">Verifying…</string>
    <string name="reset">Reset</string>
    <string name="please_wait">Please Wait…</string>
    <string name="employee_details">Employee Details</string>
    <string name="no_internet">No Internet Connection!\nPlease check your connection.</string>
    <string name="loading">Loading...</string>
    <string name="no_application_found">No Application Found!</string>
    <string name="optional">(Optional)</string>
    <string name="required">(Required)</string>
    <string name="reporting_to">Reporting To</string>
    <string name="station_leave_form">Station Leave Form</string>
    <string name="leave_type">Leave Type</string>
    <string name="date_1">Date 1</string>
    <string name="date_2">Date 2</string>
    <string name="date_3">Date 3</string>
    <string name="reason_of_leave">Reason of Leave</string>
    <string name="upload_document">Upload Document</string>
    <string name="leave_doc_img">leaveDocImg</string>
    <string name="choose_optional">Choose(Optional)</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="permanent_guest">Permanent/Guest</string>
    <string name="start_date">Start Date</string>
    <string name="organisation_department">Organisation Department</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="work_location">Work Location</string>
    <string name="designation">Designation</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_my_profile">Edit My Profile</string>
    <string name="email">Email</string>
    <string name="call">Call</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="log_out">Log Out</string>
    <string name="report_the_problem">Report the Problem</string>
    <string name="pending_applications">Pending Applications</string>
    <string name="admin_tools">Admin Tools</string>
    <string name="approved_application">Approved Application</string>
    <string name="rejected_applications">Rejected Applications</string>
    <string name="employees_on_leave">Employees On Leave</string>
    <string name="active_employees">Active Employees</string>
    <string name="past_employees">Past Employees</string>
    <string name="reported_problem">Reported Problem</string>
    <string name="enter_job_end_date">Enter Job End Date</string>
    <string name="empty_list">Empty List</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="view">View</string>
    <string name="short_leave_application">Short Leave Application</string>
    <string name="one_day_leave_application">One Day Leave Application</string>
    <string name="short_leave">Short Leave</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_your_new_password">Create your new Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="first_login_or_forgot_password_click_here">First Login OR Forgot Password ? Click Here...</string>
    <string name="login_using_password_click_here">Login using password ? Click here...</string>
    <string name="reset_leave">Reset Leave</string>
    <string name="enter_balances">Enter Balances:</string>
    <string name="resetBalanceWarning">After clicking update button these\nleave balances will reflect \nimmediately in each employee\nleave balance of the institution.</string>
    <string name="casual_leave">Casual Leave</string>
    <string name="medical_leave">Medical Leave</string>
    <string name="got_it">Got It</string>
    <string name="half_day_leave_application">Half Day Leave Application</string>
</resources>