<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#88E0EB"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_new_password"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/newPasswordFirst"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_2dp_green"
        android:gravity="center"
        android:padding="5dp"
        android:hint="@string/enter_password"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/newPasswordReEnter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_2dp_green"
        android:gravity="center"
        android:padding="5dp"
        android:hint="@string/re_enter_password"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/submitPassword_CreatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/submit"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="55dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>