<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logInActivity"
    android:gravity="center_vertical"
    android:background="#EAD4D4"
    android:paddingStart="35dp"
    android:paddingEnd="5dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="User Type :  "/>
        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/userTypeSpinner_login"
            android:layout_height="wrap_content"
            android:background="@drawable/border_2dp_green"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="@drawable/border_2dp_green"
        android:layout_marginTop="25dp">
        <EditText
            android:id="@+id/countryCode"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:gravity="end"
            android:background="@color/white"
            android:focusable="false"
            android:padding="10dp"
            android:text="@string/country_code"
            android:inputType="none" />
        <EditText
            android:id="@+id/mobileNumberLogInPg_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number_here"
            android:inputType="phone"
            android:background="@color/white"
            android:padding="10dp"
            android:autofillHints="phone" />
    </LinearLayout>
    <Button
        android:id="@+id/generateOTP_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/get_otp"
        android:textSize="20sp"
        android:layout_marginTop="25dp" />
    <EditText
        android:id="@+id/otp_ET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="null"
        android:inputType="numberPassword"
        android:background="@drawable/border_2dp_green"
        android:layout_marginTop="25dp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/validateOTP_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/validate_otp"
        android:textSize="20sp"
        android:layout_marginTop="25dp" />
    <EditText
        android:id="@+id/empId_ET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/employee_id_here"
        android:autofillHints="Employee Id"
        android:inputType="textShortMessage"
        android:maxLength="20"
        android:background="@drawable/border_2dp_green"
        android:layout_marginTop="25dp"
        android:padding="10dp"/>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">
        <Button
            android:id="@+id/logIn_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/logInReset_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:backgroundTint="#F63434"
            android:layout_alignParentEnd="true"
            android:textSize="20sp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/firstLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#F32E2E"
        android:text="@string/first_login_or_forgot_password_click_here"/>
</androidx.appcompat.widget.LinearLayoutCompat>