<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addNewEmployeeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_20dp_blue"
        android:layout_marginTop="60dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#EF8B8B"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/backBtn_resetLeave"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#EF8B8B"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back_button" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/reset_leave"
            android:layout_marginStart="15dp">
        </TextView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_balances"
                android:textStyle="bold"
                android:textSize="27sp"/>
            <TextView
                android:id="@+id/lastResetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:layout_marginTop="15dp"
                android:textColor="#E22829"
                android:text="@string/resetBalanceWarning"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/casual_leave" />
                <EditText
                    android:id="@+id/casualBal_resetLeave"
                    android:layout_width="60dp"
                    android:background="@drawable/border_2dp_green"
                    android:inputType="number"
                    android:padding="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/medical_leave"
                    android:layout_marginEnd="15dp"/>
                <EditText
                    android:id="@+id/medicalBal_resetLeave"
                    android:background="@drawable/border_2dp_green"
                    android:inputType="number"
                    android:padding="10dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
                <TextView
                    android:textSize="20sp"
                    android:text="@string/short_leave" />
                <EditText
                    android:id="@+id/shortBal_resetLeave"
                    android:background="@drawable/border_2dp_green"
                    android:inputType="number"
                    android:padding="10dp"/>
            </TableRow>
            <Button
                android:id="@+id/updateShortBtn_resetLeave"
                android:text="Update Only Short Leave"
                android:layout_marginTop="15dp"/>
            <Button
                android:id="@+id/updateBtn_resetLeave"
                android:text="Update All"
                android:layout_marginTop="15dp"/>
        </TableLayout>
    </ScrollView>
</RelativeLayout>