<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/border_20dp_blue"
    tools:context=".shortLeaveForm">
<TextView
    android:id="@+id/formHeading"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="#4CAF50"
    android:gravity="center"
    android:text="@string/short_leave_application"
    android:textSize="23sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="10dp"
    android:background="@drawable/border_2dp_green"
    app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/formHeading"
    app:layout_constraintVertical_bias="0.0">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbars="none">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="2">
                <TableRow>
                    <TextView
                        android:text="@string/reporting_to"
                        android:textStyle="bold"/>
                    <Spinner
                        android:id="@+id/reportingToSpinner_SRL"
                        android:layout_height="29dp"
                        android:background="@drawable/border_2dp_green"
                        android:layout_column="2"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="15dp">
                    <TextView
                        android:text="@string/leave_type"
                        android:textStyle="bold"/>
                    <Spinner
                        android:id="@+id/leaveTypeSpinner_SRL"
                        android:layout_height="29dp"
                        android:background="@drawable/border_2dp_green"
                        android:layout_column="2"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="15dp">
                    <TextView
                        android:text="Leave Date"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/date1TV_SRL"
                        android:padding="5dp"
                        android:hint="@string/required"
                        app:drawableEndCompat="@drawable/baseline_calendar_month_24"
                        android:background="@drawable/border_2dp_green"
                        android:layout_column="2"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="15dp">
                    <TextView
                        android:text="Start Time"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/timeTV_SRL"
                        android:padding="5dp"
                        android:hint="@string/required"
                        app:drawableEndCompat="@drawable/baseline_access_time_24"
                        android:background="@drawable/border_2dp_green"
                        android:layout_column="2"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="15dp">
                    <TextView
                        android:text="@string/reason_of_leave"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/leaveReason_SRL"
                        android:layout_height="100dp"
                        android:padding="5dp"
                        android:background="@drawable/border_2dp_green"
                        android:inputType="textMultiLine"
                        android:hint="@string/optional"
                        android:textSize="15sp"
                        android:gravity="top"
                        android:layout_column="2"
                        android:autofillHints="" />
                </TableRow>
                <TableRow
                    android:layout_marginTop="15dp">
                    <TextView
                        android:text="@string/upload_document"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_column="2"
                        android:background="@drawable/border_2dp_green">

                        <ImageView
                            android:id="@+id/applicationDocSRL"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:layout_column="2"
                            android:scaleType="fitXY"
                            android:src="@drawable/baseline_image_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/chooseImgBtn_SRL"
                            android:contentDescription="@string/leave_doc_img" />

                        <Button
                            android:id="@+id/chooseImgBtn_SRL"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:text="@string/choose_optional"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E8E7E7"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/backBtnSRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/cancel"
        android:backgroundTint="#B90909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitBtnSRL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#21670C"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>